# sierpinski-triangle

./: Cargo.toml  LICENSE.txt  README.md  build.sh  entry.js  index.html  package.json  webpack.config.js
src/: lib.rs  sierpinski_generator.rs
