[package]
name = "sierpinski-triangle-generator"
version = "0.1.0"
authors = ["ykonomi <hgKaguyaToupako4er@gmail.com>"]
description = "A generator for sierpinski triangle"
edition = "2018"
repository = "https://github.com/ykonomi/rust-hobbies"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.43"
rand = "0.6"
rand_os = "0.1.3"
